# blender-download-manager

./: .gitignore  Cargo.toml  TODO.md  config.toml  readme.md  results.json
src/: blender_utils.rs  config.rs  get.rs  getter.rs  io.rs  lib.rs  main.rs  select.rs  tracker.rs  tui.rs
src/tui/: app.rs  message.rs  mod.rs  utils.rs
src/tui/app/: file_list.rs  file_list_widget.rs  mod.rs  remote.rs  state.rs  widgets.rs
src/tui/app/file_list/: utils.rs
src/tui/app/widgets/: help.rs  remote.rs  utils.rs
src/tui/app/widgets/files/: mod.rs  utils.rs
