[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
colored = "2.1.0"
scraper = "0.18.1"
serde = { version = "1.0.196", features = ["serde_derive"] }
serde_json = "1.0.113"
ureq = "2.9.4"
