[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
colored = "2.1.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.28.1"
regex = "1.10.4"
reqwest = "0.12.7"
scraper = "0.18.1"
serde = { version = "1.0.196", features = ["serde_derive"] }
serde_json = "1.0.113"
tokio = { version = "1.40.0", features = [ "macros", "time", "rt-multi-thread"] }
toml = "0.8.14"
